# TreeBranchMarks

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
benchmarks/: base_woodelf_progress_experiment.py  example_experiment.py  fraud_depth_experiment.py  fraud_detection_experiment.py  fraud_pd_shap_experiment.py  fraud_shap_vs_treegrad_experiment.py  fraud_vec_pd_shap_experiment.py  fraud_woodelf_vs_vectorized_linear_tree_shap.py  fraud_woodelfhd_vs_original_depth_experiment.py  intrusion_detection_experiment.py  sklearn_datasets_experiment.py  small_dataset_experiment.py  woodelfhd_depth_sweep_experiment.py  woodelfhd_depth_sweep_simple_experiment.py  woodelfhd_main_experiment.py  woodelfhd_vs_original_woodelf_experiment.py
benchmarks/reports/: WoodelfhdMainExperiment.html  base_woodelf_progress_experiment.html  fraud_pd_shap_experiment.html  higgs_shap_vs_treegrad_experiment.html  woodelfhd_depth_sweep_simple_experiment.html  woodelfhd_main_experiment.html  woodelfhd_vs_original_woodelf_experiment.html  woodelfhd_with_woodelfhd_gpu_experiment.html
benchmarks/resources/: background_and_path_dependent_HIGGS_data.ipynb  background_and_path_dependent_KDD_data.ipynb  background_shap_fraud_data.ipynb  (+2 more)
colab/: 01_run_woodelfhd.ipynb  02_run_original_woodelf.ipynb  03_run_shap.ipynb  04_merge_and_report.ipynb  05_run_pltreeshap_fasttreeshap.ipynb  Copy of Example_CaliforniaHousing.ipynb
tests/: test_method.py  test_method_cache.py  test_params.py  test_scoring.py  test_store.py  test_task.py
treebranchmarks/: __init__.py
(+57 files in other folders)
